examples/test/testpolicy3556.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3556
  namespace: namespace217
spec:
  podSelector:
    matchLabels:
      key41: value32
      key16: value31
      key35: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value26
          key6: value21
          key27: value8
      podSelector:
        matchLabels:
          key14: value39
          key29: value40
